crates/ruff_linter/src/rules/flake8_tidy_imports/snapshots/ruff_linter__rules__flake8_tidy_imports__tests__ban_all_imports.snap
---
source: crates/ruff_linter/src/rules/flake8_tidy_imports/mod.rs
---
TID252 Prefer absolute imports over relative imports
 --> TID252.py:7:1
  |
6 | # TID252
7 | from . import sibling
  | ^^^^^^^^^^^^^^^^^^^^^
8 | from .sibling import example
9 | from .. import parent
  |
help: Replace relative imports with absolute imports

TID252 Prefer absolute imports over relative imports
  --> TID252.py:8:1
 6 | # TID252
 7 | from . import sibling
 8 | from .sibling import example
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 9 | from .. import parent
10 | from ..parent import example
help: Replace relative imports with absolute imports

TID252 Prefer absolute imports over relative imports
  --> TID252.py:9:1
 7 | from . import sibling
 8 | from .sibling import example
 9 | from .. import parent
   | ^^^^^^^^^^^^^^^^^^^^^
10 | from ..parent import example
11 | from ... import grandparent
help: Replace relative imports with absolute imports

TID252 Prefer absolute imports over relative imports
  --> TID252.py:10:1
   |
 8 | from .sibling import example
 9 | from .. import parent
10 | from ..parent import example
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
11 | from ... import grandparent
12 | from ...grandparent import example
help: Replace relative imports with absolute imports

TID252 Prefer absolute imports over relative imports
  --> TID252.py:11:1
   |
 9 | from .. import parent
10 | from ..parent import example
11 | from ... import grandparent
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
12 | from ...grandparent import example
13 | from  .parent import hello
help: Replace relative imports with absolute imports

TID252 Prefer absolute imports over relative imports
  --> TID252.py:12:1
   |
10 | from ..parent import example
11 | from ... import grandparent
12 | from ...grandparent import example
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
13 | from  .parent import hello
14 | from .\
help: Replace relative imports with absolute imports

TID252 Prefer absolute imports over relative imports
  --> TID252.py:13:1
   |
11 | from ... import grandparent
12 | from ...grandparent import example
13 | from  .parent import hello
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
14 | from .\
15 |     parent import \
help: Replace relative imports with absolute imports

TID252 Prefer absolute imports over relative imports
  --> TID252.py:14:1
   |
12 |   from ...grandparent import example
13 |   from  .parent import hello
14 | / from .\
15 | |     parent import \
16 | |         hello_world
   | |___________________^
17 |   from \
18 |       ..parent\
help: Replace relative imports with absolute imports

TID252 Prefer absolute imports over relative imports
  --> TID252.py:17:1
   |
15 |       parent import \
16 |           hello_world
17 | / from \
18 | |     ..parent\
19 | |     import \
20 | |     world_hello
   | |_______________^
21 |   from ..... import ultragrantparent
22 |   from ...... import ultragrantparent
help: Replace relative imports with absolute imports

TID252 Prefer absolute imports over relative imports
  --> TID252.py:21:1
   |
19 |     import \
20 |     world_hello
21 | from ..... import ultragrantparent
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
22 | from ...... import ultragrantparent
23 | from ....... import ultragrantparent
help: Replace relative imports with absolute imports

TID252 Prefer absolute imports over relative imports
  --> TID252.py:22:1
20 |     world_hello
21 | from ..... import ultragrantparent
22 | from ...... import ultragrantparent
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
23 | from ....... import ultragrantparent
24 | from ......... import ultragrantparent
help: Replace relative imports with absolute imports

TID252 Prefer absolute imports over relative imports
  --> TID252.py:23:1
   |
21 | from ..... import ultragrantparent
22 | from ...... import ultragrantparent
23 | from ....... import ultragrantparent
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
24 | from ......... import ultragrantparent
25 | from ........................... import ultragrantparent
help: Replace relative imports with absolute imports

TID252 Prefer absolute imports over relative imports
  --> TID252.py:24:1
   |
22 | from ...... import ultragrantparent
23 | from ....... import ultragrantparent
24 | from ......... import ultragrantparent
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
25 | from ........................... import ultragrantparent
26 | from .....parent import ultragrantparent
help: Replace relative imports with absolute imports

TID252 Prefer absolute imports over relative imports
  --> TID252.py:25:1
   |
23 | from ....... import ultragrantparent
24 | from ......... import ultragrantparent
25 | from ........................... import ultragrantparent
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
26 | from .....parent import ultragrantparent
27 | from .........parent import ultragrantparent
help: Replace relative imports with absolute imports

TID252 Prefer absolute imports over relative imports
  --> TID252.py:26:1
   |
24 | from ......... import ultragrantparent
25 | from ........................... import ultragrantparent
26 | from .....parent import ultragrantparent
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
27 | from .........parent import ultragrantparent
28 | from ...........................parent import ultragrantparent
help: Replace relative imports with absolute imports

TID252 Prefer absolute imports over relative imports
  --> TID252.py:27:1
   |
25 | from ........................... import ultragrantparent
26 | from .....parent import ultragrantparent
27 | from .........parent import ultragrantparent
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
28 | from ...........................parent import ultragrantparent
help: Replace relative imports with absolute imports

TID252 Prefer absolute imports over relative imports
  --> TID252.py:28:1
   |
26 | from .....parent import ultragrantparent
27 | from .........parent import ultragrantparent
28 | from ...........................parent import ultragrantparent
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Replace relative imports with absolute imports
