crates/ruff_linter/src/rules/flake8_tidy_imports/snapshots/ruff_linter__rules__flake8_tidy_imports__tests__banned_api.snap
---
source: crates/ruff_linter/src/rules/flake8_tidy_imports/mod.rs
---
TID251 `cgi` is banned: The cgi module is deprecated.
 --> TID251.py:2:8
  |
1 | ## Banned modules ##
2 | import cgi
  |        ^^^
3 |
4 | from cgi import *

TID251 `cgi` is banned: The cgi module is deprecated.
 --> TID251.py:4:1
  |
2 | import cgi
3 |
4 | from cgi import *
  | ^^^^^^^^^^^^^^^^^
5 |
6 | from cgi import a, b, c

TID251 `cgi` is banned: The cgi module is deprecated.
 --> TID251.py:6:1
  |
4 | from cgi import *
5 |
6 | from cgi import a, b, c
  | ^^^^^^^^^^^^^^^^^^^^^^^
7 |
8 | # banning a module also bans any submodules

TID251 `cgi` is banned: The cgi module is deprecated.
  --> TID251.py:9:8
 8 | # banning a module also bans any submodules
 9 | import cgi.foo.bar
   |        ^^^^^^^^^^^
10 |
11 | from cgi.foo import bar

TID251 `cgi` is banned: The cgi module is deprecated.
  --> TID251.py:11:1
   |
 9 | import cgi.foo.bar
10 |
11 | from cgi.foo import bar
   | ^^^^^^^^^^^^^^^^^^^^^^^
12 |
13 | from cgi.foo.bar import *

TID251 `cgi` is banned: The cgi module is deprecated.
  --> TID251.py:13:1
   |
11 | from cgi.foo import bar
12 |
13 | from cgi.foo.bar import *
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
14 |
15 | ## Banned module members ##

TID251 `typing.TypedDict` is banned: Use typing_extensions.TypedDict instead.
  --> TID251.py:17:20
   |
15 | ## Banned module members ##
16 |
17 | from typing import TypedDict
   |                    ^^^^^^^^^
18 |
19 | import typing

TID251 `typing.TypedDict` is banned: Use typing_extensions.TypedDict instead.
  --> TID251.py:22:1
   |
21 | # attribute access is checked
22 | typing.TypedDict
   | ^^^^^^^^^^^^^^^^
23 |
24 | typing.TypedDict.anything

TID251 `typing.TypedDict` is banned: Use typing_extensions.TypedDict instead.
  --> TID251.py:24:1
   |
22 | typing.TypedDict
23 |
24 | typing.TypedDict.anything
   | ^^^^^^^^^^^^^^^^
25 |
26 | # function calls are checked

TID251 `typing.TypedDict` is banned: Use typing_extensions.TypedDict instead.
  --> TID251.py:27:1
   |
26 | # function calls are checked
27 | typing.TypedDict()
   | ^^^^^^^^^^^^^^^^
28 |
29 | typing.TypedDict.anything()

TID251 `typing.TypedDict` is banned: Use typing_extensions.TypedDict instead.
  --> TID251.py:29:1
   |
27 | typing.TypedDict()
28 |
29 | typing.TypedDict.anything()
   | ^^^^^^^^^^^^^^^^
30 |
31 | # import aliases are resolved

TID251 `typing.TypedDict` is banned: Use typing_extensions.TypedDict instead.
  --> TID251.py:33:1
   |
31 | # import aliases are resolved
32 | import typing as totally_not_typing
33 | totally_not_typing.TypedDict
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
34 |
35 | # relative imports are respected
