crates/ruff_linter/src/rules/flake8_tidy_imports/snapshots/ruff_linter__rules__flake8_tidy_imports__tests__banned_api_package.snap
---
source: crates/ruff_linter/src/rules/flake8_tidy_imports/mod.rs
---
TID251 `attrs` is banned: The attrs module is deprecated.
 --> application.py:3:8
  |
1 | from typing import TYPE_CHECKING, Any, ClassVar
2 |
3 | import attrs
  |        ^^^^^
4 |
5 | from ....import unknown

TID251 `my_package.sublib.protocol` is banned: The protocol module is deprecated.
 --> application.py:6:1
  |
5 | from ....import unknown
6 | from ..protocol import commands, definitions, responses
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
7 | from ..server import example
8 | from .. import server

TID251 `my_package.sublib.protocol` is banned: The protocol module is deprecated.
  --> application.py:10:1
 8 | from .. import server
 9 | from . import logger, models
10 | from ..protocol.UpperCaseModule import some_function
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
